force-app/main/default/objects/Case_Activity__c/Case_Activity__c.object-meta.xml
<CustomObject>
    <description>Tracks the lifecycle of a case (Intake, Routing, Approval) for audit compliance.</description>
    <label>Case Activity</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>