force-app/main/default/objects/Case_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Categorizes the lifecycle event for the Case Timeline and reporting.</description>
    <inlineHelpText>Select the stage or event this activity represents.</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Provider Lookup</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>