force-app/main/default/objects/Case_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field stores the specific lifecycle event details, such as &apos;Intake Created&apos;, &apos;Provider Selected&apos;, or &apos;Status Changed&apos;, to provide an audit trail for the Case.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>